Remove Duplicate h1 h2 border bottom CSS Remove Document mode border-left: none  No longer needed with new border-left collapse feature Add priority colors to priority tooltip Dropdown menu link color and background color implemented .pinned admonition Add video to README on how to use Admonition Add CSS for theme without path highlighting incase users want to use the "Bullet Threading Plugin" Minor Adjustments to admonition borders All Pages action bar background color and border

--- a/oxford-blue-nph.css
+++ b/oxford-blue-nph.css
@@ -320,44 +320,6 @@ a[priority="C"]::before,
 	border-radius: var(--radius-lg);
 }
 
-a:hover > .bullet-container .bullet {
-	background-color: rgba(var(--havelock-blue), 1);
-	box-shadow: 0 0 0 2px var(--ls-primary-background-color),
-		0 0 0 4px rgba(var(--havelock-blue), 1);
-	transform: scale(1.4);
-	transition: var(--transition);
-}
-
-.ls-block .bullet {
-	background-color: rgba(var(--havelock-blue), 1);
-	box-shadow: 0 0 0 2px var(--ls-primary-background-color),
-		0 0 0 4px rgba(var(--havelock-blue), 1);
-	display: block;
-	transition: var(--transition);
-}
-
-/*=========================================================*/
-/* === START highlight current path by cannibalox v0.2 ===*/
-/*=========================================================*/
-
-.ls-block:not(:focus-within) .bullet {
-	background-color: var(--ls-block-bullet-color);
-	box-shadow: none;
-}
-
-/* .block-children:not(:focus-within) {
-  border-left: 1px solid var(--ls-guideline-color);
-} */
-
-/*========================================================*/
-/* === highlight current path by cannibalox v0.2  END ===*/
-/*========================================================*/
-
-.block-children-container:focus-within > .block-children-left-border {
-	background-color: rgba(var(--havelock-blue), 0.5);
-	transition: var(--transition);
-}
-
 /* Bullet & Bullet Container END */
 
 /* Inline Header Tags Adjustments */
